Slideshow flicker fix

--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -81,6 +81,7 @@
 	background: url("/img/for_home/home_slide_1.jpg");
 	background-position: center center;
 	-webkit-background-size: cover;
+	-webkit-backface-visibility: hidden;
   	-moz-background-size: cover;
   	-o-background-size: cover;
 	background-size: cover;
